--- a/styles.css
+++ b/styles.css
@@ -798,22 +798,22 @@ position: absolute;
 */
 @-webkit-keyframes typing {
   from { width: 0 }
-  to { width: 90vw}
+  to { width: 100%}
 }
 
 @-moz-keyframes typing {
   from { width: 0 }
-  to { width: 90vw}
+  to { width: 100%}
 }
 
 @-ms-keyframes typing {
   from { width: 0 }
-  to { width: 90vw }
+  to { width: 100% }
 }
 
 @-o-keyframes typing {
   from { width: 0 }
-  to { width: 90vw }
+  to { width: 100% }
 }
 
 
