--- a/stylesResponsive.css
+++ b/stylesResponsive.css
@@ -736,5 +736,24 @@ overflow: hidden;
 	font-size: 3vw;
 }
 
+@-webkit-keyframes typing {
+  from { width: 0 }
+  to { width: 100%}
+}
+
+@-moz-keyframes typing {
+  from { width: 0 }
+  to { width: 100%}
+}
+
+@-ms-keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@-o-keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
 }
 
