--- a/LargePh.css
+++ b/LargePh.css
@@ -737,4 +737,24 @@ overflow: hidden;
 	font-family: 'Raleway';
 	font-size: 3vw;
 }
+	
+@-webkit-keyframes typing {
+  from { width: 0 }
+  to { width: 100%}
+}
+
+@-moz-keyframes typing {
+  from { width: 0 }
+  to { width: 100%}
+}
+
+@-ms-keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@-o-keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
 }
